--- a/templates/back.html.twig
+++ b/templates/back.html.twig
@@ -44,12 +44,12 @@
             <hr class="sidebar-divider">
             <li class="nav-item">
                 <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapseDeck" aria-expanded="true" aria-controls="collapseDeck">
-                    <i class="fas fa-tasks"></i>
+                    <i class="fas fa-bars"></i>
                     <span>Éditions</span>
                 </a>
                 <div id="collapseDeck" class="collapse show" aria-labelledby="headingDeck" data-parent="#accordionSidebar" style="">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <a class="collapse-item" href="{{ path('planeswalkers.set.index') }}"><i class="far fa-envelope"></i> Liste</a>
+                        <a class="collapse-item" href="{{ path('planeswalkers.set.index') }}">Liste</a>
                     </div>
                 </div>
             </li>
