base autocompletion de carte

--- a/templates/back.html.twig
+++ b/templates/back.html.twig
@@ -74,36 +74,21 @@
 
                     {# Moteur de recherche - MD #}
                     <form method="post" action="#todo" class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
-                        <div class="input-group">
-                            <input type="text" name="endpoint-search" class="form-control border-0 small" placeholder="Rechercher..." aria-label="Rechercher" aria-describedby="basic-addon2">
-                            <div class="input-group-append">
-                                <button class="btn btn-sm btn-secondary" type="submit">
-                                    <i class="fas fa-search fa-sm"></i>
-                                </button>
+                        <div class="autocomplete_area">
+                            <input type="hidden" id="cards_search_choice" name="cards_search_choice">
+                            <div class="input-group">
+                                <input id="card_search" name="card_search" class="form-control form-control-sm" placeholder="Rechercher..." type="search">
+                                <div class="input-group-append">
+                                    <span class="input-group-text"><i class="fas fa-search"></i></span>
+                                </div>
+                            </div>
+                            <div id="card_search_results" class="autocomplete_search_results" style="display:none;">
+                                <div id="card_search_cards"></div>
                             </div>
                         </div>
                     </form>
 
                     <ul class="navbar-nav ml-auto">
-
-                        {# Moteur de recherche - SM #}
-                        <li class="nav-item dropdown no-arrow d-sm-none">
-                            <a class="nav-link dropdown-toggle" href="#" id="searchDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <i class="fas fa-search fa-fw"></i>
-                            </a>
-                            <div class="dropdown-menu dropdown-menu-right p-3 shadow animated--grow-in" aria-labelledby="searchDropdown">
-                                <form class="form-inline mr-auto w-100 navbar-search">
-                                    <div class="input-group">
-                                        <input type="text" class="form-control bg-light border-0 small" placeholder="Rechercher..." aria-label="Rechercher" aria-describedby="basic-addon2">
-                                        <div class="input-group-append">
-                                            <button class="btn btn-secondary" type="button">
-                                                <i class="fas fa-search fa-sm"></i>
-                                            </button>
-                                        </div>
-                                    </div>
-                                </form>
-                            </div>
-                        </li>
 
                         {# Aide #}
                         <li class="nav-item dropdown no-arrow mx-1">
@@ -208,6 +193,70 @@
         <script src="{{ asset('assets/plateforme/js/sb-admin-2.js') }}"></script>
         <script src="{{ asset('assets/select2/js/select2.js') }}"></script>
         <script src="{{ asset('bundles/fosckeditor/ckeditor.js') }}"></script>
+        <script>
+            // Lance la recherche si l'utilisateur n'a pas saisie depuis 500ms
+            $('#card_search').keyup(function () {
+                clearTimeout($.data(this, 'timer'));
+                let wait = setTimeout(searchCards, 500);
+                $(this).data('timer', wait);
+            });
+
+            // Recherche de carte
+            function searchCards() {
+                var nb_caractere_debut_recherche = 3;
+                if ($('#card_search').val().length >= nb_caractere_debut_recherche) {
+                    let parametres = {
+                        term: $('#card_search').val().replace(' ', '+'), // Terme à rechercher
+                    };
+                    $.ajax({
+                        url: "{{ path('planeswalkers.card.search') }}",
+                        type: 'get',
+                        dataType: 'json',
+                        beforeSend: function () {
+                            $('#loader-area').fadeIn();
+                        },
+                        success: function (data) {
+                            $('#card_search_results').show();
+                            let results_html = '';
+                            $.each(data.cards.data, function (index, element) {
+                                results_html = results_html + '<div class="autocomplete_result">';
+                                results_html = results_html + '<a class="autocomplete_choice autocomplete_card_choice"';
+                                results_html = results_html + ' data-card-id="' + element.id + '"';
+                                results_html = results_html + ' data-card-name="' + element.name + '"';
+                                results_html = results_html + '>';
+                                results_html = results_html + element.name;
+                                results_html = results_html + '</a>';
+                                results_html = results_html + '</div>';
+                            });
+                            results_html = results_html + '</div>';
+                            $('#card_search_cards').html(results_html);
+                        },
+                        complete: function () {
+                            $('#loader-area').fadeOut();
+                        },
+                        data: parametres
+                    });
+                }
+            }
+
+            // Action lors du choix d'une carte
+            $(document).on('click', '.autocomplete_card_choice', function (event) {
+                let card_id = $(this).data('card-id');
+                let card_name = $(this).data('card-name');
+                $('#cards_search_choice').val(card_id);
+                $('#card_search').val(card_name);
+                $('#card_search_results').hide();
+            });
+
+            // Ferme les résultats d'autocomplétion lors d'un clic à l'extérieur de cet élement
+            $(document.body).click(function (e) {
+                let div_cliquable = $('.autocomplete_area');
+                if (!$(e.target).is(div_cliquable) && !$.contains(div_cliquable[0], e.target)) {
+                    $('#card_search_results').hide();
+                }
+            });
+
+        </script>
         {% block javascripts %}{% endblock %}
     </body>
 </html>
