--- a/public/assets/plateforme/css/back.css
+++ b/public/assets/plateforme/css/back.css
@@ -1,13 +1,26 @@
+/* Ckeditor */
+.cke_bottom{display:none !important;}
+
 /* Recherche par autocomplétion */
 .autocomplete_area {position:relative;}
-.autocomplete_results_area {display:none;position:absolute;background-color:rgba(0,0,0,0.8);left:0;right:0;top:70px;box-shadow:0px 8px 8px #000;;padding:3px 10px;}
+.autocomplete_results_area {display:none;position:absolute;background-color:rgba(0,0,0,0.8);left:0;right:0;top:70px;box-shadow:0px 8px 8px #000;padding:3px 10px;}
 .autocomplete_categorie {background-color:#888;font-weight:bold;padding:5px 10px;}
 .autocomplete_result {border-bottom:1px solid #000;padding:2px 10px;}
 .autocomplete_result a{font-size:0.80em;line-height:0.80em;color:#fff;}
 .autocomplete_all_results {text-align:right;padding:3px 10px;}
-#client_search_results {position:absolute;z-index:1;background-color:rgba(0,0,0,0.8);left:0;right:0;box-shadow:0px 8px 8px #000;}
+.autocomplete_search_results {position:absolute;z-index:1;background-color:rgba(0,0,0,0.8);left:0;right:0;box-shadow:0px 8px 8px #000;}
+.autocomplete_choice {cursor:pointer;}
 
-/* loader */
+/* loader & saving area*/
 #loader-area {position:fixed;padding:10px 32px;bottom:10px;left:10px;background-color:rgba(0,0,0,0.5);color:#fff;}
+#saving-area {position:fixed;padding:10px 32px;bottom:10px;left:10px;background-color:rgba(0,0,0,0.5);color:#fff;}
 
+/* Select2 */
+.select2-container--default .select2-selection--single {background-color:#2a3038;border: 1px solid #2a3038;height:31px;}
+.select2-container--default .select2-selection--single .select2-selection__rendered {color: #fff;}
+.select2-dropdown {background-color:rgba(0,0,0,0.8);box-shadow:0px 8px 8px #000;border:0 none;font-size:0.80em;color:#fff;}
+.select2-container--default .select2-results__option--highlighted[aria-selected] {background-color:transparent;text-decoration:underline;}
+.select2-container--default .select2-results__option[aria-selected="true"]{background-color:transparent;}
+
+/* Bootstrap */
 input[type='file'].form-control {padding:0;}
