--- a/templates/back.html.twig
+++ b/templates/back.html.twig
@@ -43,13 +43,26 @@
 
             <hr class="sidebar-divider">
             <li class="nav-item">
-                <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapseDeck" aria-expanded="true" aria-controls="collapseDeck">
+                <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapseEdition" aria-expanded="true" aria-controls="collapseEdition">
                     <i class="fas fa-bars"></i>
                     <span>Éditions</span>
                 </a>
-                <div id="collapseDeck" class="collapse show" aria-labelledby="headingDeck" data-parent="#accordionSidebar" style="">
+                <div id="collapseEdition" class="collapse show" aria-labelledby="headingDeck" data-parent="#accordionSidebar" style="">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <a class="collapse-item" href="{{ path('planeswalkers.set.index') }}">Liste</a>
+                    </div>
+                </div>
+            </li>
+
+            <hr class="sidebar-divider">
+            <li class="nav-item">
+                <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapseDeck" aria-expanded="true" aria-controls="collapseDeck">
+                    <i class="fas fa-layer-group"></i>
+                    <span>Decks</span>
+                </a>
+                <div id="collapseDeck" class="collapse show" aria-labelledby="headingDeck" data-parent="#accordionSidebar" style="">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <a class="collapse-item" href="{{ path('planeswalkers.deck.index') }}">Mes decks</a>
                     </div>
                 </div>
             </li>
@@ -89,7 +102,6 @@
                     </div>
 
                     <ul class="navbar-nav ml-auto">
-
                         {# Aide #}
                         <li class="nav-item dropdown no-arrow mx-1">
                             <a class="nav-link dropdown-toggle" href="{{ path('tutorial.index') }}" title="Aide en ligne">
@@ -102,9 +114,7 @@
                                 <i class="fas fa-bug fa-fw"></i>
                             </a>
                         </li>
-
                         <div class="topbar-divider d-none d-sm-block"></div>
-
                         {# Utilisateur #}
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -125,14 +135,11 @@
                                 </a>
                             </div>
                         </li>
-
                     </ul>
 
                     </nav>
 
-                    
                     <div class="container-fluid">
-
                         {# Alertes #}
                         {% for message in app.flashes('success') %}
                             <div class="alert alert-success alert-dismissible fade show" role="alert">
@@ -169,13 +176,9 @@
 
                         {# Contenu de la page #}
                         {% block body %}{% endblock %}
-
                     </div>
-
                 </div>
-
             </div>
-
         </div>
 
         <a class="scroll-to-top rounded" href="#page-top">
