--- a/templates/planeswalkers/deck/edit.html.twig
+++ b/templates/planeswalkers/deck/edit.html.twig
@@ -58,13 +58,21 @@
             {# Contenu du deck #}
             <div class="card shadow mb-4">
                 <div class="card-body">
-                    {% for deck_card in deck_cards %}
-                        {{ deck_card.quantite }}x {{ deck_card.card.name }}
-                    {% endfor %}
+                    <div class="row">
+                        {% for deck_card in deck_cards %}
+                            <div class="col-sm-6 col-md-4 col-lg-3">
+                                <figure>
+                                    <img src="{{ deck_card.card.imageUrisNormal }}" alt="{{ deck_card.card.name }}" class="img-fluid" style="border-radius:15px;">
+                                    <figcaption>{{ deck_card.quantite }}x {{ deck_card.card.name }}</figcaption>
+                                </figure>
+                            </div>
+                        {% endfor %}
+                    </div>
                 </div>
             </div>
         </div>
 
+        {# Commentaires #}
         <div class="col-md-3">
             <div class="card shadow mb-4">
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
