Deck/edit moteur de recherche

--- a/templates/planeswalkers/card/show.html.twig
+++ b/templates/planeswalkers/card/show.html.twig
@@ -9,7 +9,19 @@
     <div class="d-sm-flex align-items-center justify-content-between mb-4">
         <h1 class="h3 mb-0 text-gray-200">{{ card.name }} <small>{{ card.lang }}</small></h1>
         <div class="d-sm-inline-block">
-            {{ card.mana_cost }}
+            <form action="{{ path('planeswalkers.deckcard.new') }}" method="post" class="d-inline-block">
+                <input type="hidden" name="id_scryfall" value="{{ card.id }}"/>
+                <input type="hidden" name="quantite" value="1"/>
+                <div class="input-group">
+                    <select class="form-control form-control-sm" name="deck" onChange="submit()">
+                        <option>Ajouter à un deck</option>
+                        {% for deck in decks %}
+                            <option value="{{ deck.id }}">{{ deck }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+            </form>
+
         </div>
     </div>
 
