--- a/templates/back.html.twig
+++ b/templates/back.html.twig
@@ -188,6 +188,9 @@
         <div id="loader-area" class="small" style="display:none;">
             <i class="fas fa-spinner fa-pulse"></i> Chargement en cours...
         </div>
+        <div id="saving-area" class="small" style="display:none;">
+            <i class="fas fa-save"></i> Enregistrement en cours...
+        </div>
 
         <noscript>Your browser does not support JavaScript!</noscript>
         <script src="{{ asset('assets/jquery/jquery-3.3.1.min.js') }}"></script>
