Deck/edit suppression de cartes

--- a/templates/back.html.twig
+++ b/templates/back.html.twig
@@ -90,7 +90,7 @@
                         <div class="autocomplete_area">
                             <input type="hidden" id="cards_search_choice" name="cards_search_choice">
                             <div class="input-group">
-                                <input id="card_search" name="card_search" class="form-control form-control-sm" placeholder="Rechercher..." type="search">
+                                <input id="card_search" name="card_search" class="form-control form-control-sm" placeholder="Rechercher..." type="search" autocomplete="off">
                                 <div class="input-group-append">
                                     <span class="input-group-text"><i class="fas fa-search"></i></span>
                                 </div>
