--- a/templates/planeswalkers/deck/edit.html.twig
+++ b/templates/planeswalkers/deck/edit.html.twig
@@ -79,7 +79,9 @@
                         {% for deck_card in deck_cards %}
                             <div class="deck-card-area col-sm-6 col-md-4 col-lg-3 col-xl-2">
                                 <div class="py-3">
-                                    <img src="{{ deck_card.card.imageUrisNormal }}" alt="{{ deck_card.card.name }}" class="img-fluid" style="border-radius:15px;">
+                                    <a href="{{ path('planeswalkers.card.show', {id: deck_card.card.idScryfall}) }}">
+                                        <img src="{{ deck_card.card.imageUrisNormal }}" alt="{{ deck_card.card.name }}" class="img-fluid" style="border-radius:15px;">
+                                    </a>
                                     <div class="input-group input-group-sm mb-3">
                                         <input type="number" min="0" step="1" class="form-control form-control-sm input-deckcard-quantite" data-deckcard="{{ deck_card.id }}" name="quantite" value="{{ deck_card.quantite }}" />
                                         <div class="input-group-append">
