Outils d'estimation de deck

--- a/templates/planeswalkers/card/show.html.twig
+++ b/templates/planeswalkers/card/show.html.twig
@@ -51,17 +51,17 @@
                 </div>
                 <div class="card-body">
                     <div class="row">
-                        <span class="badge {{ card.legalities.standard|legality }}">Standard</span>
-                        <span class="badge {{ card.legalities.modern|legality }}">Modern</span>
-                        <span class="badge {{ card.legalities.legacy|legality }}">Legacy</span>
-                        <span class="badge {{ card.legalities.vintage|legality }}">Vintage</span>
-                        <span class="badge {{ card.legalities.pauper|legality }}">Pauper</span>
-                        <span class="badge {{ card.legalities.penny|legality }}">Penny</span>
-                        <span class="badge {{ card.legalities.commander|legality }}">Commander</span>
-                        <span class="badge {{ card.legalities.brawl|legality }}">Brawl</span>
-                        <span class="badge {{ card.legalities.duel|legality }}">Duel</span>
-                        <span class="badge {{ card.legalities.future|legality }}">Future</span>
-                        <span class="badge {{ card.legalities.oldschool|legality }}">Oldschool</span>
+                        <span class="badge mx-1 {{ card.legalities.standard|legality }}">Standard</span>
+                        <span class="badge mx-1 {{ card.legalities.modern|legality }}">Modern</span>
+                        <span class="badge mx-1 {{ card.legalities.legacy|legality }}">Legacy</span>
+                        <span class="badge mx-1 {{ card.legalities.vintage|legality }}">Vintage</span>
+                        <span class="badge mx-1 {{ card.legalities.pauper|legality }}">Pauper</span>
+                        <span class="badge mx-1 {{ card.legalities.penny|legality }}">Penny</span>
+                        <span class="badge mx-1 {{ card.legalities.commander|legality }}">Commander</span>
+                        <span class="badge mx-1 {{ card.legalities.brawl|legality }}">Brawl</span>
+                        <span class="badge mx-1 {{ card.legalities.duel|legality }}">Duel</span>
+                        <span class="badge mx-1 {{ card.legalities.future|legality }}">Future</span>
+                        <span class="badge mx-1 {{ card.legalities.oldschool|legality }}">Oldschool</span>
                     </div>
                 </div>
             </div>
