--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -21,7 +21,7 @@
                             <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
                         {% endif %}
 
-                        <h1 class="h4 text-gray-200 mb-4"><i class="fab fa-wizards-of-the-coast"></i> Planeswalkers <sup>V1.0</sup></h1>
+                        <h1 class="h4 text-gray-200 mb-4">Planeswalkers</h1>
 
                         <hr>
 
@@ -52,7 +52,11 @@
                             </button>
                         </form>
                         <hr>
-                        <span class="small text-muted">© 2019 - <a href="https://scryfall.com/" target="_blank" class="text-muted">Propulsé par l'API Scryfall</a>.</span>
+                        <p>
+                            <span class="small text-muted">Magic : the Gathering est une marque déposée de Wizards of the Coast</span>
+                            <br>
+                            <span class="small text-muted">© Adrien Durmier 2019 - <a href="https://scryfall.com/" target="_blank" class="text-muted">Propulsé par l'API Scryfall</a>.</span>
+                        </p>
                     </div>
                 </div>
             </div>
