--- a/templates/planeswalkers/deck/index.html.twig
+++ b/templates/planeswalkers/deck/index.html.twig
@@ -32,7 +32,7 @@
                             <td>{{ deck.title }}</td>
                             <td>{{ deck.updated|date('d/m/Y') }}</td>
                             <td>
-                                <a href="{{ path('planeswalkers.deck.edit', {code: deck.edit}) }}">
+                                <a href="{{ path('planeswalkers.deck.edit', {id: deck.id}) }}">
                                     voir
                                 </a>
                             </td>
